--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,13 +1,15 @@
 {
-    "version":2,
-    "builds":[
-        {"src":"*.js","use":"@vercel/node"}
+    "version": 2,
+    "builds": [
+      {
+        "src": "server.js",
+        "use": "@now/node"
+      }
     ],
-    "routes":[
-        {
-            "src":"/(.*)",
-            "dest":"/"
-        }
+    "routes": [
+      {
+        "src": "/(.*)",
+        "dest": "server.js"
+      }
     ]
-    
-}
+  }
