--- a/server/vercel.json
+++ b/server/vercel.json
@@ -2,14 +2,18 @@
     "version": 2,
     "builds": [
       {
-        "src": "server.js",
-        "use": "@now/node"
+        "src": "./server.js",
+        "use": "@vercel/node"
       }
     ],
     "routes": [
       {
         "src": "/(.*)",
-        "dest": "server.js"
+        "dest": "./server.js",
+        "methods": ["GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"],
+        "headers": {
+          "Access-Control-Allow-Origin": "*"
+        }
       }
     ]
   }
