--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "nodemon": "^3.0.1",
     "postcss": "^8.4.28",
     "tailwindcss": "^3.3.3",
-    "vite": "^4.4.0"
+    "vite": "^4.4.0",
+    "vite-plugin-cross-origin-isolation": "^0.1.6"
   }
 }
