--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,12 @@
 {
+    
+        "rewrites": [
+          {
+            "source": "/(.*)",
+            "destination": "/index.html"
+          }
+        ],
+      
     "headers": [
       {
         "source": "/(.*)",
