--- a/server/vercel.json
+++ b/server/vercel.json
@@ -2,18 +2,14 @@
     "version": 2,
     "builds": [
       {
-        "src": "./server.js",
-        "use": "@vercel/node"
+        "src": "server.js",
+        "use": "@now/node"
       }
     ],
     "routes": [
       {
         "src": "/(.*)",
-        "dest": "./server.js",
-        "methods": ["GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"],
-        "headers": {
-          "Access-Control-Allow-Origin": "*"
-        }
+        "dest": "server.js"
       }
     ]
   }
